--- a/flutter_application_1/kec-study-hub-backend/package.json
+++ b/flutter_application_1/kec-study-hub-backend/package.json
@@ -2,19 +2,24 @@
   "name": "kec-study-hub-backend",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "commonjs", 
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
+    "axios": "^1.8.1",
+    "bad-words": "^4.0.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "csv-parse": "^5.6.0",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
+    "csv-parser": "^3.2.0",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.0",
+    "mongoose": "^7.8.6",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0"
   },
