--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -9,26 +9,28 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.2.0
-  file_picker: ^8.1.2
+  file_picker: ^9.0.2
   shared_preferences: ^2.2.0
-  intl: ^0.19.0
+  intl: ^0.20.2
   url_launcher: ^6.2.0
   uuid: ^4.4.0
   path_provider: ^2.1.0
   universal_html: ^2.2.0
   permission_handler: ^11.3.0
-  device_info_plus: ^10.1.0
-  share_plus: ^7.2.0
+  device_info_plus: ^11.3.3
+  share_plus: ^10.1.4
   flutter_pdfview: ^1.3.0
-  flutter_local_notifications: ^17.2.1+1
-  timezone: ^0.9.4  # Added for zonedSchedule 
+  flutter_local_notifications: ^18.0.1
+  timezone: ^0.10.0  # Added for zonedSchedule 
   google_fonts: ^6.1.0
   http_parser: ^4.0.0
+  
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
